--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -61,10 +61,12 @@
         <ul class="space-y-4 text-sm">
           <li><a href="/pages/contact" class="hover:text-white transition-colors duration-200">Contact Us</a></li>
           <li>
-            <a href="/pages/shipping" class="hover:text-white transition-colors duration-200">Shipping & Returns</a>
+            <a href="/pages/shipping-policy" class="hover:text-white transition-colors duration-200"
+              >Shipping & Returns</a
+            >
           </li>
           <li><a href="/pages/size-guide" class="hover:text-white transition-colors duration-200">Size Guide</a></li>
-          <li><a href="/pages/sub-faq" class="hover:text-white transition-colors duration-200">FAQ</a></li>
+          <li><a href="/pages/faq" class="hover:text-white transition-colors duration-200">FAQ</a></li>
         </ul>
       </div>
 
